@@ -15,6 +15,9 @@ What's New in Python 3.0 beta 5
 Core and Builtins
 -----------------
 
+- Issue #4200: Changed the atexit module to store its state in its
+  PyModuleDef atexitmodule. This fixes a bug with multiple subinterpeters.
+
 - Issue #4237: io.FileIO() was raising invalid warnings caused by
   insufficient initialization of PyFileIOObject struct members.
 
